# jora

./: .gitignore  CLAUDE.md  README.md  client.py  config.py  cursor_agent_utils.py  exceptions.py  git_operations.py  jira_api.py  jira_task_manager.py  jora.py  keyboard_utils.py  pr_manager.py  pyproject.toml  requirements.txt  setup.sh  ui_manager.py
clients/: __init__.py  git.py  github.py  jira.py
commands/: __init__.py  address.py  assign.py  base.py  commit.py  deploy.py  implement.py  interactive.py  pr.py  review.py  task_summary.py
jora/: agent.py  app.py  cli.py  config.py  git.py  github.py  help.py  keychain.py  linear.py  notifications.py  state.py  store.py  term.py  terminal.py  text.py  tmux.py  tracker.py
jora/actions/: __init__.py  action.py  clean.py  delete.py  fix.py  kill.py  open.py  pr.py  quit.py  refresh.py  select.py
jora/creds/: __init__.py  credfile.py  keychain.py
jora/notify/: __init__.py  checks.py  send.py
plugins/telegram/: bot.py  pyproject.toml
tests/: conftest.py  test_cli.py  test_notifications.py  test_state.py  test_store.py
tests/mocks/: __init__.py  github.py  tracker.py
