[project]
name = "jora"
version = "0.1.0"
description = "Linear task manager CLI"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
jora = "jora.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
