[project]
name = "jora"
version = "0.1.0"
description = "Linear task manager CLI"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
jora = "jora.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C4", "SIM", "RET", "PTH"]
ignore = ["E501", "E701", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
